[project]
name = "rl-course"
version = "0.1.0"
description = "Reinforcement Learning Course"
authors = ["Mateusz Pieniak <mateusz.pieniak@gmail.com>"]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "envpool>=1.2.5",
    "gymnasium[toy-text]>=1.3.0",
    "matplotlib>=3.10.5",
    "typer>=0.26.7",
]

[tool.basedpyright]
executionEnvironments = [
    { root = "lesson1" },
]
reportUnusedCallResult = false
